--- a/popup/index.html
+++ b/popup/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <script src="popup.js"></script>
+    <script src="jquery-3.4.1.min.js"></script>
 </head>
 <body>
     <button class="btn">Download All</button>
