--- a/popup/index.html
+++ b/popup/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="popup.js"></script>
     <script src="../jquery-3.4.1.min.js"></script>
 </head>
+
 <body>
-    <button class="btn">Download All</button>
-    <div class="gallery">
-        
+    <div class="container">
+        <button id="download_all" class="btn">Download All</button>
+        <div class="gallery">
+
+        </div>
     </div>
 </body>
+
 </html>
